--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "k8w-extend-native",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Extended native JS",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,8 @@
   },
   "typings": "index.d.ts",
   "dependencies": {
-    "k8w-linq-array": "^0.1.3",
-    "k8w-super-date": "^0.1.2",
-    "k8w-super-object": "^0.1.3"
+    "k8w-linq-array": "*",
+    "k8w-super-date": "*",
+    "k8w-super-object": "*"
   }
 }
